2008-09-09  Michael Natterer  <mitch@gimp.org>

	* app/Makefile.am
	* plug-ins/script-fu/Makefile.am: remove references to $(REGEXREPL).

2008-09-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd-save.c (create_merged_image): don't leak
	the GimpDrawable.

2008-09-09  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/file-psd/psd-save.c (save_data): Formating.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* authors.xml: some more updates.

	* AUTHORS: regenerated.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd-save.c: applied patch from Dennis Ranke as
	attached to bug #551231. Changes the PSD save plug-in to store
	transparency data in the image data section. Also fixes bug #551232
	(saving an indexed image with multiple layers as PSD modifies the
	image).

2008-09-08  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpbrushcore.c: based on a patch from David Gowers
	clamp the brush scale so that the brush never becomes smaller than
	0.5 pixels. Fixes bug #548631.

2008-09-08  Michael Natterer  <mitch@gimp.org>

	Bug 551306 – Color picker for text tool does not show selected
	palette

	* app/tools/gimptexttool.c (gimp_text_tool_register): add
	GIMP_CONTEXT_PALETTE_MASK to the tool option's context mask so the
	color popup's palette follows the globally selected palette.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* authors.xml: restored alphabetic order. Use real name instead of
	a nick.

	* AUTHORS: regenerated.

	* app/dialogs/authors.xsl: changed rule to only include
	contributors from the 2.6 development cycle in the About dialog.

2008-09-08  Roman Joost  <romanofski@gimp.org>

	* authors.xml: updated documenters who contributed to the user
	manual since 2.4

2008-09-07  Sven Neumann  <sven@gimp.org>

	Applied 'gimp-decimate.diff' as announced on the mailing-list:

	* app/gimp-log.[ch]: added log domain "scale".

	* app/paint-funcs/scale-region.c: replaced decimation routines